# DocCheck

./: .coveragerc  .env.example  Dockerfile  README.md  docker-compose.yml  dump.rdb  nginx.conf  pyproject.toml
config/: celery.py  settings.py  urls.py
docapi/: admin.py  apps.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
docapi/migrations/: 0001_initial.py
media/docapi/documents/: test_Esf0PfS.docx
users/: urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/registration/: login.html
