[tool.poetry]
name = "doccheck"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.3"
pillow = "^11.2.1"
djangorestframework = "^3.16.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
ipython = "^9.3.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line_length = 119
multi_line_output = 3
include_trailing_comma = true

